MOTECH-2861: Tasks refactor

--- a/modules/tasks/tasks/src/main/resources/webapp/partials/form-data-source.html
+++ b/modules/tasks/tasks/src/main/resources/webapp/partials/form-data-source.html
@@ -1,4 +1,4 @@
-<div ui-if="step['@type'] == 'DataSource'" class="panel-group task-group" id="step-{{step.order}}" overflow-change expand-accordion ng-cloak>
+<div ui-if="step['@type'] == 'DataSourceDto'" class="panel-group task-group" id="step-{{step.order}}" overflow-change expand-accordion ng-cloak>
 
     <div class="panel-heading panel-header clearfix">
         <div class="pull-right">
